add : scroll animation

--- a/8. Scrollable Images/index.html
+++ b/8. Scrollable Images/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,17 @@
     <title>Image replacement</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-  
+
+    <div class="box b1">
+        <img src="img1.jpg" alt="">
+    </div>
+    <div class="box b2">
+        <img src="img2.jpg" alt="">
+    </div>
+
 
 </body>
+
 </html>
